# c-flags

./: .clang-format  .gitignore  LICENSE  README.md  c-flags.c  c-flags.h  main.c  meson.build  meson_options.txt  string-view.c
.github/workflows/: health-check.yml  linux.yml  macos.yml  windows-mingw.yml  windows-msvc.yml
examples/: example-single-header.c  example.c  meson.build
lib/: c-flags.c  c-flags.h  c-flags.pc  meson.build  string-view.c  string-view.h
scripts/: generate-single-header.py
single-header/: c-flags.h
tests/: c-flags-test-default.cpp  c-flags-test-long-eq.cpp  c-flags-test-long.cpp  c-flags-test-no-value.cpp  c-flags-test-short.cpp  main.cpp  meson.build  string-view-tests.cpp
